syntax = "proto3";

import "google/protobuf/any.proto";

package publish;

service publishService {
  rpc getMethod(getRequest) returns (getResponse);
  rpc uploadExcelMethod(uploadExcelRequest) returns (uploadExcelResponse);
  rpc healthCheck(healthCheckRequest) returns (healthCheckResponse);
}

message getRequest {
  string data = 1;
}

message getResponse {  
  string status = 1;
  int32 statusCode = 2;
  string message = 3;
}

message uploadExcelRequest {
  bytes data = 1;
  string employeeId = 2;
}

message uploadExcelResponse {
  string status = 1;
  int32 statusCode = 2;
  string message = 3;
}

message healthCheckRequest {
  string data = 1;
}

message healthCheckResponse {
  string status = 1;
  int32 statusCode = 2;
  string message = 3;
}